--- a/ca4_partB.Rmd
+++ b/ca4_partB.Rmd
@@ -31,26 +31,27 @@ library('statsr')
 hist(daie_ca4_game_data$age )
 hist(daie_ca4_game_data$avg_monthly_expenditure_dlc  )  
 
-cor(daie_ca4_game_data$avg_monthly_expenditure_dlc, daie_ca4_game_data$age)
-cor(daie_ca4_game_data$age,daie_ca4_game_data$avg_years_playing_games)
-cor(daie_ca4_game_data$age,daie_ca4_game_data$avg_monthly_hrs_gaming)
-cor(daie_ca4_game_data$avg_years_playing_games, daie_ca4_game_data$avg_monthly_hrs_gaming)
-cor(daie_ca4_game_data$avg_monthly_hrs_gaming, daie_ca4_game_data$avg_monthly_expenditure_dlc)
- 
+cor(daie_ca4_game_data$age, daie_ca4_game_data$avg_monthly_hrs_gaming)
 
 
-plot_ss(age, avg_years_playing_games, daie_ca4_game_data)
+plot_ss(age, avg_monthly_hrs_gaming, daie_ca4_game_data)
 
-m1 <- lm(age ~ avg_years_playing_games, data = daie_ca4_game_data)
+m1 <- lm(age ~ avg_monthly_hrs_gaming, data = daie_ca4_game_data)
 summary(m1)
 
 
-plot(daie_ca4_game_data$age ~ daie_ca4_game_data$avg_years_playing_games)
+plot(daie_ca4_game_data$age ~ daie_ca4_game_data$avg_monthly_hrs_gaming)
 abline(m1)
 
 
-plot(m1$residuals ~ daie_ca4_game_data$age)
+plot(m1$residuals ~ daie_ca4_game_data$avg_monthly_hrs_gaming)
 abline(h = 0, lty = 3)  # adds a horizontal dashed line at y = 0
+
+hist(m1$residuals)
+
+
+qqnorm(m1$residuals)
+qqline(m1$residuals) 
 
 
 
