--- a/ca4_generate.Rmd
+++ b/ca4_generate.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "daie_ca4_data.sqlite"
+title: "daie_ca4"
 author: "Conor Crean"
 date: '`r Sys.Date()`'
 output: html_document
@@ -27,8 +27,11 @@ if(!require("dplyr"))
   install.packages("dplyr")
 if(!require("readr"))
 install.packages("readr")
+if(!require("DBI"))
+install.packages("DBI")
 
 
+library(DBI)
 library(RMySQL)
 library(readr)
 library(dplyr)
@@ -43,34 +46,19 @@ library(dplyr)
 # Connect (and create) a new local SQLite DB
 ```{r}
 
-conn <- dbConnect(RSQLite::SQLite(), "")
-```
-
-## Establish a connection to the MySQL DB
-```{r echo=FALSE}
-conn = dbConnect(RMySQL::MySQL(),
-                 dbname = 'sql8589818',
-                 host = 'sql8.freesqldatabase.com',
-                 port = 3306,
-                 user = 'sql8589818',
-                 password = rstudioapi :: askForPassword("Enter database password"))
-
-
-
+conn <- dbConnect(RSQLite::SQLite(), "daie_ca4_data.sqlite")
 
 
 ```
-
-#Password: L8UMyTpfJ8
-
-
 
 
 # Test the DB
 ```{r}
 
-dbListTables(conn)
-dbListFields(conn, "Asset")
+
+
+dbListTables(conn )
+dbListTables(conn,"Asset" )
 
 ```
 
@@ -84,8 +72,10 @@ dbListFields(conn, "Asset")
 
 # Execute a query with no result
 ```{r}
-result <- dbGetQuery(conn, "SELECT * FROM Asset")
+
+result <- dbGetQuery(conn, "SELECT * FROM Asset ")
 result
+
 ```
 
 
